--- a/BC42_JS7+8_Trịnh Ngọc Dung/BT7+8.html
+++ b/BC42_JS7+8_Trịnh Ngọc Dung/BT7+8.html
@@ -35,7 +35,7 @@
             </div>
 
             <!-- Hiển thị kết quả -->
-            <div id="btn-output" class="alert alert-success mt-2 d-none"></div>
+            <div id="btn-output" class="alert alert-success mt-2 "></div>
           </div>
         </div>
       </div>
